# task-108

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.py
proto/: CMakeLists.txt  messages.proto
protobuf_parser/: DelimitedMessagesStreamParser.py  helpers.py
tests/: Test_DelimitedMessagesStreamParser.py  Test_Helpers.py
